--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.4.1
 cryptography==44.0.0
 Django==5.1.4
 django-cors-headers==4.6.0
+django-recaptcha==4.0.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 gunicorn==23.0.0
